--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "vue-awesome-notifications": "^2.2.9",
     "vue-ckeditor": "^1.0.0",
+    "vue-i18n": "^8.2.0",
     "vue-router": "^3.0.1"
   }
 }
