--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "vue": "^2.5.7"
   },
   "dependencies": {
+    "laravel-echo": "^1.4.0",
+    "socket.io-client": "^2.1.1",
     "vue-awesome-notifications": "^2.2.9",
     "vue-ckeditor": "^1.0.0",
     "vue-i18n": "^8.2.0",
     "vue-infinite-loading": "^2.3.5",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1"
   }
 }
