--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "axios": "^0.18",
+    "babel-preset-stage-2": "^6.24.1",
     "bootstrap": "^4.0.0",
     "cross-env": "^5.1",
     "jquery": "^3.2",
@@ -20,6 +21,7 @@
     "vue": "^2.5.7"
   },
   "dependencies": {
+    "emoji-mart-vue": "^2.6.4",
     "laravel-echo": "^1.4.0",
     "socket.io-client": "^2.1.1",
     "vue-awesome-notifications": "^2.2.9",
