--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "vue": "^2.5.7"
   },
   "dependencies": {
+    "@johmun/vue-tags-input": "^1.5.9",
+    "better-vue-input-tag": "^1.1.0",
     "emoji-mart-vue": "^2.6.4",
     "laravel-echo": "^1.4.0",
     "socket.io-client": "^2.1.1",
